fix navigation bar in frontend on small screen sizes

--- a/websrv-flask/app/sass/home.scss
+++ b/websrv-flask/app/sass/home.scss
@@ -20,3 +20,38 @@
 .languagepicker_container {
   margin: 8px 0 8px 0;
 }
+
+.navbar .container {
+  display: grid;
+
+  .navbar-header {
+    text-align: center;
+  }
+
+  .navbar-right-side {
+    display: grid;
+
+    padding: 0 10px 0 10px;
+  }
+
+  .navbar-form, .languagepicker_container {
+    text-align: center;
+    padding: 0;
+  }
+}
+
+
+@media only screen and (min-width: 768px) {
+  .navbar .container {
+    display: flex;
+    justify-content: space-between;
+
+    .navbar-right-side {
+      display: flex;
+    }
+
+    .navbar-form.login-form {
+      display: flex;
+    }
+  }
+}
